feat: insert, update and remove a university
